# 10x-student

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/questcanvas/: __init__.py  __main__.py  auth.py  config.py  errors.py  server.py
src/questcanvas/canvas/: __init__.py  client.py  exceptions.py  pagination.py  rate_limits.py  types.py
src/questcanvas/extractors/: __init__.py  base.py  docx.py  html.py  pdf.py  pptx.py  text.py
src/questcanvas/services/: __init__.py  files.py
src/questcanvas/tools/: announcements.py  assignments.py  courses.py  files.py  modules.py
tests/: fakes.py  test_canvas_client.py  test_config.py  test_file_service.py  test_server.py
