[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "questcanvas"
version = "0.1.0"
description = "Local MCP-first Canvas study copilot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.0.0",
  "PyMuPDF>=1.24.0",
  "python-pptx>=0.6.23",
  "python-docx>=1.1.2",
]

[project.optional-dependencies]
dev = []

[project.scripts]
questcanvas = "questcanvas.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
